fixed extra space at right of page in mobile view

--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ body{
   font-family: 'BioRhyme', serif;
   position: relative;
   min-height: 100vh;
+  
 }
 .navbar{
   display: flex;
@@ -163,6 +164,8 @@ ul {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-grow: 1;
+  flex-shrink: 0;
   }
 .content h6{
   font-size: 32px;
@@ -180,11 +183,12 @@ ul {
   padding: 16px;
   margin: 16px;
   width: 300px;
+  flex-grow: 1;
 }
 .quote{
   display: grid;
-  flex-shrink: 0;
-  flex-grow: 1;
+  /* flex-shrink: 0;
+  flex-grow: .01; */
   padding: 64px;
   font-size: 18px;
   background-color: #e5e7eb;
@@ -300,6 +304,12 @@ ul {
 
 /* MEDIA QUERIES */
 @media screen and (max-width: 600px) {
+  html,body
+  {
+      margin: 0px;
+      padding: 0px;
+      overflow-x: hidden; 
+  }
   .navbar{
     justify-content: center;
   }
